# adchopper

./: .gitignore  README.md  pyproject.toml
adchopper/: __init__.py  backends.py  classify.py  cli.py  cut.py  report.py  segments.py  transcribe.py
tests/: test_logic.py
